# seven-eleven-jp-naama-jashin-crawler

./: .gitignore  LICENSE  README.md  crawler.py  encoder.py  main.py  model.py  pyproject.toml  render.py  request.json.example
template/: index.html
