[tool.poetry]
name = "seven-eleven-naama-jashin-crawler"
version = "0.1.0"
description = ""
authors = ["Vongola <me@vongola.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
parsel = "^1.9.1"
requests = "^2.32.3"
arrow = "^1.3.0"
pydash = "^8.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 120
